k8s/kind/network-policy/test-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: network-test
  namespace: job-queue

spec:
  containers:
    - name: network-test
      image: postgres:16-alpine
      command: ["sh", "-c", "sleep 36000"]
