k8s/kind/network-policy/allow-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-dns-egress
  namespace: job-queue

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - api
          - worker
  
  policyTypes:
    - Egress
  
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns

      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
