k8s/kind/network-policy/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-egress
  namespace: job-queue

spec:
  podSelector: {}
  
  policyTypes:
    - Egress
  
  egress: []
