k8s/kind/network-policy/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-ingress
  namespace: job-queue

spec:
  podSelector: {}
  
  policyTypes:
    - Ingress
  
  ingress: []
