k8s/kind/network-policy/postgres-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-egress
  namespace: job-queue

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - api
          - worker
  
  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
