k8s/kind/network-policy/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-ingress
  namespace: job-queue

spec:
  podSelector:
    matchLabels:
      app: postgres
  
  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api
        - podSelector:
            matchLabels:
              app: worker
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
          podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - keda-operator
                  - keda-operator-metrics-apiserver
      ports:
        - protocol: TCP
          port: 5432
